Files korrekt benannt + href Links angepasst 'S' aus MainLayout entfernt Unnötige Leerzeilen im Code entfernt

--- a/datenschutzerklärung.html
+++ b/datenschutzerklärung.html
@@ -11,10 +11,10 @@
     <A href="./index.html"><img height="100px" src="./Bilder/logo.jpg" alt="Firmenlogo"></A>
     <ul>
         <li>
-            <a href="./usere-produkte.html">Unsere Produkte</a>
+            <a href="./unsere-produkte.html">Unsere Produkte</a>
         </li>
         <li>
-            <a href="./user-unternehmen.html">Unser Unternehmen</a>
+            <a href="./unser-unternehmen.html">Unser Unternehmen</a>
         </li>
         <li>
             <a href="./datenschutzerklärung.html">Datenschutzerklärung</a>
@@ -52,7 +52,5 @@
           <br>
           <br>
           <br>
-
-
 </body>
 </html>
