--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <img height="100px" src="./Bilder/logo.jpg" alt="Firmenlogo">
     <ul>
         <li>
-            <a href="./usere-produkte.html">Unsere Produkte</a>
+            <a href="./unsere-produkte.html">Unsere Produkte</a>
         </li>
         <li>
-            <a href="./user-unternehmen.html">Unser Unternehmen</a>
+            <a href="./unser-unternehmen.html">Unser Unternehmen</a>
         </li>
         <li>
             <a href="./datenschutzerklärung.html">Datenschutzerklärung</a>
         </li>
-    </ul>S
+    </ul>
     <hr>
     <br>
     <br>
@@ -78,8 +78,5 @@
     <br>
     <br>
     <br>
-
-
-    
 </body>
 </html>
